# clone-all

./: clone-all.cabal  clone-all.hs
