name:                clone-all
version:             0.1.1.0
synopsis:            Clone all github repositories from a given user
description:         Clone all github repositories from a given user
homepage:            https://github.com/silky/clone-all
license:             MIT
license-file:        LICENSE
author:              Noon Silk
maintainer:          noonsilk@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable clone-all
  main-is: clone-all.hs
  build-depends:
    base                   >= 4.0,
    text                   >= 0.10,
    system-filepath        >= 0.4,
    optparse-applicative   >= 0.6,
    system-fileio          >= 0.3,
    process                >= 1.1,
    bytestring             >= 0.10,
    aeson                  >= 0.6.2.1,
    github                 >= 0.8,
    directory              >= 1.0,
    transformers           >= 0.3
